update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -12,11 +12,11 @@
         <languages></languages>
       </div>
       <div class="flex items-center gap-2">
-        <div class="text-gray-400 hidden md:inline-block">
+        <div class="text-gray-400 hidden sm:inline-block">
           {{ "ForgotPassword.AlreadyHaveAccount" | translate }}?
         </div>
         <button
-          class="flex-shrink-0"
+          class="flex-shrink-0 btn--sm"
           mat-flat-button
           [color]="'primary'"
           routerLink="/login"
@@ -75,7 +75,7 @@
             (click)="forgotPasswordForm.get('email')?.setValue('')"
           >
             <mat-icon
-              class="icon-size-5"
+              
               [svgIcon]="'mat_outline:close'"
             ></mat-icon>
           </button>
@@ -85,7 +85,7 @@
             *ngIf="forgotPasswordForm.get('email')?.valid"
           >
             <mat-icon
-              class="icon-size-5"
+              
               [svgIcon]="'mat_outline:check'"
             ></mat-icon>
           </div>
@@ -121,7 +121,7 @@
       </form>
     </div>
   </div>
-  <div class="mt-auto text-hint text-sm text-center py-4">
+  <div class="mt-auto text-hint text-sm text-center pb-4">
     &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
