--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -48,12 +48,12 @@
               matSuffix
             >
               <mat-icon
-                class="icon-size-5"
+                
                 *ngIf="passwordField.type === 'password'"
                 [svgIcon]="'mat_outline:visibility'"
               ></mat-icon>
               <mat-icon
-                class="icon-size-5"
+                
                 *ngIf="passwordField.type === 'text'"
                 [svgIcon]="'mat_outline:visibility_off'"
               ></mat-icon>
@@ -97,12 +97,12 @@
               matSuffix
             >
               <mat-icon
-                class="icon-size-5"
+                
                 *ngIf="confirmPasswordField.type === 'password'"
                 [svgIcon]="'mat_outline:visibility'"
               ></mat-icon>
               <mat-icon
-                class="icon-size-5"
+                
                 *ngIf="confirmPasswordField.type === 'text'"
                 [svgIcon]="'mat_outline:visibility_off'"
               ></mat-icon>
@@ -174,7 +174,7 @@
       </ng-container>
     </div>
   </div>
-  <div class="mt-auto text-hint text-sm text-center py-4">
+  <div class="mt-auto text-hint text-sm text-center pb-4">
     &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
