--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -27,7 +27,7 @@
         *ngIf="search.value !== ''"
         (click)="searchInput.setValue('')"
       >
-        <mat-icon class="icon-size-5" [svgIcon]="'mat_outline:close'">
+        <mat-icon  [svgIcon]="'mat_outline:close'">
         </mat-icon>
       </button>
     </mat-form-field>
