update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -12,7 +12,7 @@
         <languages></languages>
       </div>
       <div class="flex items-center gap-2">
-        <div class="text-gray-400 hidden sm:inline-block">
+        <div class="text-tertiary hidden sm:inline-block">
           {{ "ForgotPassword.AlreadyHaveAccount" | translate }}?
         </div>
         <button
