--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="flex items-center gap-2">
-        <div class="text-hint hidden sm:inline-block">
+        <div class="text-tertiary hidden sm:inline-block">
           {{ "Login.DontHaveAccount" | translate }}?
         </div>
         <button
