--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -12,7 +12,7 @@
         <languages></languages>
       </div>
       <div class="flex items-center gap-2">
-        <div class="text-tertiary hidden sm:inline-block">
+        <div class="text-hint hidden sm:inline-block">
           {{ "Register.AlreadyHaveAccount" | translate }}?
         </div>
         <button
