--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,23 +6,23 @@
 >
   <div class="flex flex-col">
     <img
-      *ngIf="currentUser?.avatar"
+      *ngIf="userService.currentUserValue?.avatar"
       class="w-8 h-8 rounded-full overflow-hidden"
-      [src]="currentUser?.avatar"
+      [src]="userService.currentUserValue?.avatar"
       alt=""
     />
     <div
-      *ngIf="!currentUser?.avatar"
+      *ngIf="!userService.currentUserValue?.avatar"
       class="w-8 h-8 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
     >
-      {{ currentUser?.name?.charAt(0) || "H" }}
+      {{ userService.currentUserValue?.name?.charAt(0) || "" }}
     </div>
   </div>
   <div
-    *ngIf="currentUser?.name"
+    *ngIf="userService.currentUserValue?.name"
     class="ml-2 font-medium text-sm max-w text-current"
   >
-    {{ currentUser?.name }}
+    {{ userService.currentUserValue?.name }}
   </div>
   <div class="ml-2 flex items-center">
     <mat-icon
