--- a/src/app/modules/client/student/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/student/account/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="studentProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Basic" | translate }}
@@ -10,16 +10,16 @@
       <div class="mb-4">
         <div class="flex gap-5 items-center">
           <img
-            *ngIf="studentProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="studentProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden"
-            [src]="studentProfileForm.get('profilePictureUrl')?.value"
+            [src]="studentProfileForm.get('avatar')?.value"
             alt=""
           />
           <div
-            *ngIf="!studentProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="!studentProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
           >
-            {{ studentProfileForm.get("firstName")?.value?.charAt(0) || "H" }}
+            {{ userService.currentUserValue?.name?.charAt(0) || "" }}
           </div>
 
           <div class="flex gap-2 justify-center">
@@ -32,14 +32,14 @@
               (click)="uploadProfilePictureFile.click()"
             >
               {{
-                studentProfileForm.get("profilePictureUrl")?.value
+                studentProfileForm.get("avatar")?.value
                   ? ("FileUpload.Change" | translate)
                   : ("FileUpload.AddAPhoto" | translate)
               }}
             </button>
             <!-- Remove image -->
             <button
-              *ngIf="studentProfileForm.get('profilePictureUrl')?.value"
+              *ngIf="studentProfileForm.get('avatar')?.value"
               type="button"
               mat-button
               class="btn--sm"
@@ -77,10 +77,7 @@
           *ngIf="firstName.value != ''"
           (click)="studentProfileForm.get('firstName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="studentProfileForm.get('firstName')?.hasError('required')"
@@ -102,10 +99,7 @@
           *ngIf="lastName.value != ''"
           (click)="studentProfileForm.get('lastName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="studentProfileForm.get('lastName')?.hasError('required')"
@@ -140,20 +134,14 @@
           "
           (click)="studentProfileForm.get('email')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <div
           class="ml-2 flex justify-center items-center"
           matSuffix
           *ngIf="studentProfileForm.get('email')?.valid"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:check'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:check'"></mat-icon>
         </div>
         <mat-progress-spinner
           [diameter]="24"
@@ -165,7 +153,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Learning" | translate }}
