--- a/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
@@ -10,16 +10,16 @@
       <div class="mb-4">
         <div class="flex gap-5 items-center">
           <img
-            *ngIf="tutorProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="tutorProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden"
-            [src]="tutorProfileForm.get('profilePictureUrl')?.value"
+            [src]="tutorProfileForm.get('avatar')?.value"
             alt=""
           />
           <div
-            *ngIf="!tutorProfileForm.get('profilePictureUrl')?.value"
+            *ngIf="!tutorProfileForm.get('avatar')?.value"
             class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
           >
-            {{ tutorProfileForm.get("firstName")?.value?.charAt(0) || "H" }}
+            {{ userService.currentUserValue?.name?.charAt(0) || "" }}
           </div>
 
           <div class="flex gap-2 justify-center">
@@ -32,14 +32,14 @@
               (click)="uploadProfilePictureFile.click()"
             >
               {{
-                tutorProfileForm.get("profilePictureUrl")?.value
+                tutorProfileForm.get("avatar")?.value
                   ? ("FileUpload.Change" | translate)
                   : ("FileUpload.AddAPhoto" | translate)
               }}
             </button>
             <!-- Remove image -->
             <button
-              *ngIf="tutorProfileForm.get('profilePictureUrl')?.value"
+              *ngIf="tutorProfileForm.get('avatar')?.value"
               type="button"
               mat-button
               class="btn--sm"
@@ -77,10 +77,7 @@
           *ngIf="firstName.value != ''"
           (click)="tutorProfileForm.get('firstName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="tutorProfileForm.get('firstName')?.hasError('required')"
@@ -102,10 +99,7 @@
           *ngIf="lastName.value != ''"
           (click)="tutorProfileForm.get('lastName')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <mat-error
           *ngIf="tutorProfileForm.get('lastName')?.hasError('required')"
@@ -162,20 +156,14 @@
           "
           (click)="tutorProfileForm.get('email')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
         <div
           class="ml-2 flex justify-center items-center"
           matSuffix
           *ngIf="tutorProfileForm.get('email')?.valid"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:check'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:check'"></mat-icon>
         </div>
         <mat-progress-spinner
           [diameter]="24"
@@ -232,10 +220,7 @@
           *ngIf="videoIntroduction.value != ''"
           (click)="tutorProfileForm.get('videoIntroduction')?.setValue('')"
         >
-          <mat-icon
-            
-            [svgIcon]="'mat_outline:close'"
-          ></mat-icon>
+          <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
         </button>
       </mat-form-field>
     </div>
