update something new

--- a/src/app/layout/layouts/student/student.component.html
+++ b/src/app/layout/layouts/student/student.component.html
@@ -5,7 +5,7 @@
   <student-header></student-header>
   <!-- Main -->
   <div class="flex-grow overflow-hidden">
-    <div class="h-full px-6 py-8 overflow-auto" scrollReset>
+    <div class="h-full p-4 md:p-6 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
