--- a/src/app/layout/layouts/tutor/tutor.component.html
+++ b/src/app/layout/layouts/tutor/tutor.component.html
@@ -2,7 +2,7 @@
   <!-- Header -->
   <tutor-header></tutor-header>
   <div class="flex-grow overflow-hidden">
-    <div class="h-full px-6 py-8 overflow-auto" scrollReset>
+    <div class="h-full p-4 md:p-6 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
