--- a/src/app/modules/admin/account/account.component.html
+++ b/src/app/modules/admin/account/account.component.html
@@ -2,25 +2,24 @@
   <app-breadcrumb
     class="block font-medium text-2xl w-full mb-6"
   ></app-breadcrumb>
-  <div class="flex-grow flex-wrap flex gap-10">
+  <div class="flex-grow md:flex-row flex-col flex-wrap flex gap-x-8 gap-y-4">
     <div class="flex flex-col w-60 flex-shrink-0">
-      <!-- <div class="font-medium  text-2xl mb-4">
-        {{ "Account.Title" | translate }}
-      </div> -->
-      <a
-        class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-tertiary cursor-pointer hover:bg-hover"
-        *ngFor="let item of navigation"
-        [routerLink]="item.routerLink"
-        routerLinkActive="bg-hover"
-      >
-        <mat-icon
-          routerLinkActive="!text-primary font-medium"
-          [svgIcon]="item.icon"
-        ></mat-icon>
-        <div routerLinkActive="text-primary font-medium">
-          {{ item.translateKey | translate }}
-        </div>
-      </a>
+      <div class="flex gap-2 md:flex-col">
+        <a
+          class="flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-tertiary cursor-pointer hover:bg-hover"
+          *ngFor="let item of navigation"
+          [routerLink]="item.routerLink"
+          routerLinkActive="bg-hover"
+        >
+          <mat-icon
+            routerLinkActive="!text-primary font-medium"
+            [svgIcon]="item.icon"
+          ></mat-icon>
+          <div routerLinkActive="text-primary font-medium">
+            {{ item.translateKey | translate }}
+          </div>
+        </a>
+      </div>
     </div>
     <div class="flex-grow">
       <div class="max-w-xl">
