--- a/src/app/modules/admin/account/change-password/change-password.component.html
+++ b/src/app/modules/admin/account/change-password/change-password.component.html
@@ -2,10 +2,13 @@
   <form
     [formGroup]="changePasswordForm"
     (ngSubmit)="submit()"
+    #changePasswordNgForm="ngForm"
     class="flex flex-col gap-4"
   >
-    <div class="bg-surface rounded p-6 pb-2 border border-solid border-light">
-      <div class="font-medium text-xl mb-3">
+    <div
+      class="bg-surface rounded p-6 pb-2 border border-solid border-light"
+    >
+      <div class="font-medium  text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
       </div>
 
@@ -159,7 +162,7 @@
         [disabled]="changePasswordForm.disabled"
       >
         <span *ngIf="!changePasswordForm.disabled">
-          {{ "Action.ChangePassword" | translate }}
+          {{ "Action.Change" | translate }}
         </span>
 
         <mat-progress-spinner
