--- a/src/app/modules/client/student/account/account.component.html
+++ b/src/app/modules/client/student/account/account.component.html
@@ -1,23 +1,25 @@
 <div class="flex flex-col w-full max-w-4xl mx-auto overflow-hidden">
-  <div class="flex-grow flex-wrap flex gap-8">
+  <div class="flex-grow md:flex-row flex-col flex-wrap flex gap-x-8 gap-y-4">
     <div class="flex flex-col w-60 flex-shrink-0">
       <div class="font-medium text-2xl mb-4">
         {{ "Account.Title" | translate }}
       </div>
-      <a
-        class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-tertiary cursor-pointer hover:bg-hover"
-        *ngFor="let item of navigation"
-        [routerLink]="item.routerLink"
-        routerLinkActive="bg-hover"
-      >
-        <mat-icon
-          routerLinkActive="!text-primary font-medium"
-          [svgIcon]="item.icon"
-        ></mat-icon>
-        <div routerLinkActive="text-primary font-medium">
-          {{ item.translateKey | translate }}
-        </div>
-      </a>
+      <div class="flex gap-2 md:flex-col">
+        <a
+          class="flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-tertiary cursor-pointer hover:bg-hover"
+          *ngFor="let item of navigation"
+          [routerLink]="item.routerLink"
+          routerLinkActive="bg-hover"
+        >
+          <mat-icon
+            routerLinkActive="!text-primary font-medium"
+            [svgIcon]="item.icon"
+          ></mat-icon>
+          <div routerLinkActive="text-primary font-medium">
+            {{ item.translateKey | translate }}
+          </div>
+        </a>
+      </div>
     </div>
     <div class="flex-grow">
       <router-outlet></router-outlet>
