--- a/src/app/modules/client/tutor/account/change-password/change-password.component.html
+++ b/src/app/modules/client/tutor/account/change-password/change-password.component.html
@@ -2,6 +2,7 @@
   <form
     [formGroup]="changePasswordForm"
     (ngSubmit)="submit()"
+    #changePasswordNgForm="ngForm"
     class="flex flex-col gap-4"
   >
     <div
